style.css
:root {
  font-size: 16px;
}

body {
  min-height: 100vh;
  margin: 0;
  padding: 1rem;
  font-family: Arial, sans-serif;
  /* background-color: #f4f4f4; */
  background-color: #121212;
  color: #f0f0f0;
  text-align: center;
  overflow: auto;
}

h1 {
  font-size: 2em;
  margin-bottom: 0.5em;
}

h2 {
  font-size: 1.5em;
  margin: 2em 0;
}

#pdfInputContainer {
  margin: auto;
  padding: 1rem;
  width: 100%;
  /* important to keep padding inside the width */
  box-sizing: border-box;
  display: flex;
  justify-content: center;
}

#pdfInput {
  width: 100%;
  max-width: 400px;
}

input[type="file"] {
  padding: 1rem;
  /* border: 0.125rem dashed #007bff; */
  border: 0.125rem dashed #90caf9;
  /* background-color: #e6f0ff; */
  background-color: #1e1e1e;
  border-radius: 0.5rem;
  cursor: pointer;
  font-size: 1em;
  transition: background-color 0.3s;
  color: #ffffff;
}

input[type="file"]:hover {
  /* background-color: #cce0ff; */
  background-color: #2c2c2c;
}

#fileName {
  font-size: 1.25em;
  font-weight: bold;
  margin-bottom: 1em;
}

.content-wrapper {
  flex-direction: column;
  align-items: center;
  gap: 3em;
  height: auto;
}

.button-group {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 1em;
  margin: 1em auto;
  width: 90%;
}

.button-group button {
  padding: 1rem 2rem;
  font-size: 1em;
  cursor: pointer;
  border: none;
  border-radius: 0.5rem;
  /* background-color: #007bff; */
  background-color: #2196f3;
  /* color: white; */
  color: #ffffff;
  width: 10rem;
  transition: background-color 0.3s;
}

.button-group button:hover {
  /* background-color: #0056b3; */
  background-color: #1976d2;
}

.button-group button:disabled {
  /* background-color: #cccccc; */
  /* color: #666666;            */

  background-color: #444444;
  color: #aaaaaa;

  cursor: not-allowed;
  opacity: 0.6;
}

.canvas-container {
  display: flex;
  justify-content: space-evenly;
  /* flex-wrap: wrap; */
  margin-top: 1em;
  width: 90%;
}

canvas {
  /* border: 0.125rem solid #ccc; */
  border: 0.125rem solid #444;
  /* background-color: white; */
  background-color: #1e1e1e;
  max-width: 20%;
  height: auto;
  border-radius: 0.5rem;
}

/* ---------- Mobile Layout ---------- */
@media (max-width: 768px) {
  body:not(.loaded) {
    height: 100vh;
    overflow: hidden;
  }

  body.loaded {
    height: auto;
    overflow: auto;
  }

  #pdfInput {
    width: 100%;
    /* 90% of the viewport width */
    max-width: 80vw;
  }

  .content-wrapper {
    gap: 1em;
  }

  .button-group {
    justify-content: space-evenly;
  }

  .button-top {
    order: 1;
    margin-bottom: 0.5em;
  }

  .button-bottom {
    order: 2;
    margin-top: 0.5em;
  }

  .button-top button {
    width: 8rem;
  }

  .button-bottom button {
    width: 6rem;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }

  .canvas-container {
    order: 3;
    flex-direction: column;
    align-items: center;
  }

  canvas {
    width: 90%;
    height: auto;
  }
}

/* ---------- Desktop Layout ---------- */
@media (min-width: 769px) {
  .button-group button {
    margin: 0 5em;
  }

  .button-top {
    order: 1;
    margin-bottom: 1em;
  }

  .button-bottom {
    order: 3;
    margin-top: 1em;
  }

  .canvas-container {
    order: 2;
    flex-direction: row;
    align-items: center;
  }
}

